--- a/dev-cs.html
+++ b/dev-cs.html
@@ -21,8 +21,7 @@
 
     <hr>
 
-    <p><a href="https://github.com/ermogenes">Ermogenes Palacio</a> - Mongaguá - 2022</p>
-
+<p><a href="https://github.com/JoaoPedroCordoba" target="_blank">Joao Pedro Cordoba</a> - Mongaguá - 2022</p>
 
 
 </body>
