--- a/dev-web.html
+++ b/dev-web.html
@@ -23,7 +23,7 @@
 
     <hr>
 
-    <p><a href="https://github.com/JoaoPedroCordoba" target="_blank">Joao Pedro Cordoba</a> - Mongaguá - 2022</p>
+    <p><a href="https://github.com/JoaoPedroCordoba">Joao Pedro Cordoba</a> - Mongaguá - 2022</p>
 
 </body>
 </html>
